--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -25,7 +25,21 @@
     }
     100% {
         transform: rotateZ(0);
-    }
+    }    
+}
 
+@keyframes carouselBtn{
+    0% {
+        border: 1px solid rgb(33, 33, 33);
+        
+    }
+    50% {
+        border: 1px solid transparent;
+        
+    }
     
+    100% {
+        border: 1px solid rgb(33, 33, 33);
+        
+    }
 }
