--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,7 +37,6 @@ body {
 .remake-box {
 	position: fixed;
 	width: 100%;
-	// height: 300px;
 	padding: 1rem;
 	transform: translateY(-105%);
 	transition: transform 2s;
@@ -60,15 +59,13 @@ body {
 		border-radius: 8px;
 		cursor: pointer;
 		background-color: rgb(246, 246, 108);
-		// transition: background-color .6s;
 		transition: box-shadow 0.6s, padding 0.6s;
-		
 		box-shadow: 5px 5px 10px rgb(5, 5, 5);
-
 	}
 	&__btn:hover {
 		box-shadow: 2px 2px 4px rgb(5, 5, 5);
-		padding: 1.5rem 2rem;
+		padding: .5rem 1.1rem;
+		
 	}
 }
 
@@ -86,13 +83,11 @@ body {
 	background-color: white;
 	border: 1px solid black;
 	border-radius: 8px;
-	// overflow: hidden;
 	cursor: pointer;
 	z-index: 100;
 
 	&:focus {
 		outline: none;
-		// border: 1px solid rgba(255, 255, 255, 0.5);
 	}
 
 	&:hover {
@@ -115,7 +110,6 @@ body {
 		right: 0;
 		height: 3px;
 		content: '';
-		// background-color: rgb(248, 245, 245);
 		transition: width 0.3s;
 		background-color: rgb(0, 0, 0);
 	}
@@ -176,7 +170,6 @@ body {
 	position: fixed;
 	left: -105%;
 	top: 100px;
-	// top: 130;
 	width: 100%;
 	height: 200px;
 	background-color: white;
@@ -197,9 +190,6 @@ body {
 	&__apps {
 		height: 108px;
 	}
-
-
-
 }
 
 .header {
@@ -210,13 +200,10 @@ body {
 	left: 50%;
 	transform: translate(-50%);
 	line-height: 100px;
-
 	color: white;
 	background-color: rgb(0, 0, 0);
 	z-index: 4;
 	&__hero-img {
-		// position: absolute;
-		// display: flex;
 		padding-left: 5%;
 		p {
 			display: none;
@@ -227,9 +214,7 @@ body {
 		}
 	}
 	&__hero-title {
-		// justify-content: center;
 		text-align: left;
-
 		letter-spacing: 3px;
 		font-size: 4rem;
 		span {
@@ -253,18 +238,11 @@ body {
 
 .welcome {
 	position: relative;
-	// top: 150px;
 	width: 100%;
-	// height: 500px;
 	padding: 16rem 4rem 6rem;
-	// background-color: rgb(252, 253, 248);
 	&__box {
-		// position: absolute;
 		position: relative;
-
-		// left: 0;
 		width: 100%;
-		// background-color: lightgray;
 		padding: 2rem;
 		box-shadow: 2px 5px 10px rgb(82, 82, 82);
 		border-radius: 8px;
@@ -327,8 +305,6 @@ body {
 .news {
 	position: relative;
 	width: 100%;
-	//  height: 100vh;
-	// background-color: rgb(231, 231, 231);
 	padding: 4rem 4rem 4rem;
 
 	h2 {
@@ -344,10 +320,7 @@ body {
 	&__cards {
 		position: relative;
 		width: 320px;
-		// height: 330px;
 		margin: 10px 10px;
-		// padding: 10px;
-		
 		box-shadow: 3px 5px 10px black;
 		background-color: white;
 		font-size: 2rem;
@@ -368,7 +341,6 @@ body {
 		&--seven {
 			margin-bottom: 4rem;
 		}
-
 	}
 
 	&__cards-additional-background {
@@ -404,9 +376,6 @@ body {
 	padding: 4rem 4rem 10rem;
 
 	&__title {
-		// text-align: center;
-		// font-size: 3.5rem;
-		// font-weight: 300;
 		@include panelNameSettings();
 	}
 	&__info {
@@ -477,12 +446,9 @@ hr {
 
 .apps {
 	position: relative;
-	// margin-top: 1rem;
-	// padding: 1rem;
 
 	&__panel {
 		position: relative;
-		// height: $apps_panel_height;
 		padding: 5rem 4rem;
 		overflow: hidden;
 	}
@@ -510,9 +476,6 @@ hr {
 		}
 	}
 
-	// &__description-left:hover &__page-one {
-	// 	transform: translateY(340px);
-	// }
 
 	&__page-one {
 		display: flex;
@@ -532,11 +495,6 @@ hr {
 			height: 430px;
 		}
 	}
-
-	// &__page-one-move {
-	// 	// transform: translateY(340px);
-	// 	color: red;
-	// }
 
 	&__page-one-img {
 		position: relative;
@@ -619,8 +577,6 @@ hr {
 		font-size: 3rem;
 	}
 	
-
-
 	&__description-right {
 		position: relative;
 		text-align: left;
@@ -628,9 +584,6 @@ hr {
 		z-index: 0;
 	}
 }
-
-
-
 
 .footer {
 	position: relative;
@@ -660,14 +613,14 @@ hr {
 			font-size: 2rem;
 			border-radius: 8px;
 		}
+
+		&__btn:hover {
+			box-shadow: 2px 2px 4px rgb(5, 5, 5);
+			padding: 1.5rem 2.1rem;
+		
+		}
 	}
-
-
-
 }
-
-
-
 
 @media (min-width: 768px) {
 
